--- a/patents-awards.html
+++ b/patents-awards.html
@@ -133,6 +133,10 @@
                 <li><i class="bi bi-bookmark-star"></i> 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
               </ul>
             </div>
+
+            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
+              <hr><div style="text-align: right;"><a href="/#showcase">BACK</a></div>
+            </div>
           </div>
 
         </div>
