--- a/publications.html
+++ b/publications.html
@@ -165,7 +165,7 @@
               <li><i class="bi bi-caret-right"></i> <span>A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English. Linguistics Department Tuesday Seminar. University of Hawai'i at Mānoa, Hawai'i, USA, May 6, 2014.</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Language is Not Only a Language. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. October 2010.</span></li>
             </ul>
-
+            <hr><a href="/#achievements">BACK</a>
         </div>
       </div>
 
