--- a/research-projects.html
+++ b/research-projects.html
@@ -114,15 +114,14 @@
               <li><i class="bi bi-caret-right"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
             </ul>
-        </div>
+            <hr><a href="/#achievements">BACK</a>
+        </div>        
       </div>
-
     </section><!-- /Project Details Section -->
 
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
-
     <div class="container">
       <div class="copyright text-center">
         <br><p>© <span>Copyright</span> <strong class="px-1 sitename">Chen-Yi Yang, Ph.D.</strong> <span>All Rights Reserved.</span></p>
