--- a/revitalizations.html
+++ b/revitalizations.html
@@ -151,6 +151,10 @@
                 <li><i class="bi bi-brightness-alt-high"></i> 聯合國 SDGs 永續發展</li>
               </ul>
             </div>
+
+            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
+              <hr><div style="text-align: right;"><a href="/#showcase">BACK</a></div>
+            </div>
           </div>
 
         </div>
