Revise `Back` links for every subpages

--- a/collaborations.html
+++ b/collaborations.html
@@ -104,7 +104,7 @@
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王1) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王2) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
             </ul>
-            <hr><a href="/#achievements">BACK</a>
+            <hr><div style="text-align: right;"><a href="/#achievements">BACK</a></div>
         </div>
       </div>
 
