--- a/graduation-projects.html
+++ b/graduation-projects.html
@@ -102,7 +102,7 @@
               <li><i class="bi bi-caret-right"></i> <span>台灣新二代的語言保留與習得：比較日本、越南及印尼 | The Language Maintenance and Acquisition of New Immigrant Children in Taiwan: The Comparison of Japan, Vietnam, and Indonesia | 2023</span></li>
               <li><i class="bi bi-caret-right"></i> <span>越南新二代學習媽媽母語之語言態度調查 | A Study on Language Attitudes of the Vietnamese New Immigrant Children Learning New Immigrant Mother's Language | 2023</span></li> 
             </ul>
-            <hr><a href="/#achievements">BACK</a>
+            <hr><div style="text-align: right;"><a href="/#achievements">BACK</a></div>
         </div>
       </div>
 
