--- a/work-experiences.html
+++ b/work-experiences.html
@@ -205,7 +205,7 @@
               <li><i class="bi bi-caret-right"></i> English listening and speaking (Undergraduate)</li>
             </ul>
 
-            <hr><a href="/#achievements">BACK</a>
+            <hr><div style="text-align: right;"><a href="/#achievements">BACK</a></div>
         </div>
 
       </div>
