Revise `Back` links for every subpages

--- a/dog-details.html
+++ b/dog-details.html
@@ -132,12 +132,9 @@
                 <li><strong>喜好</strong>：吃肉🍖、散步🐕、咬飼主🚶‍♂️、咬爛衛生紙🧻</li>
               </ul>
             </div>
-            <!-- <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-            </div> -->
+            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
+              <hr><div style="text-align: right;"><a href="/#showcase">BACK</a></div>
+            </div>
           </div>
 
         </div>
