Revise `Back` links for every subpages

--- a/competitions.html
+++ b/competitions.html
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4"><br><br>
+          <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>【教育部】全國人文社會永續行動創新應用競賽</h3>
               <ul>
