--- a/dog-details.html
+++ b/dog-details.html
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5"><br><br>
+          <div class="col-lg-5">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>【吉祥物 - 阿弟🐾】小檔案</h3>
               <ul>
