--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。🖱️<code>點選各圖上方 <i class="bi bi-caret-right-square"></i> 可瀏覽內容</code>🖱️</p>
+        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。🖱️<code>點選各圖上方 <i class="bi bi-caret-right-square"></i> 可瀏覽內容 | <i class="bi bi-zoom-in"></i> 可放大封面</code>🖱️</p>
         <br>
       </div><!-- End Section Title -->
 
