--- a/patents-awards.html
+++ b/patents-awards.html
@@ -124,7 +124,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4"><br><br>
+          <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Patents & Awards</h3>
               <ul>
