--- a/revitalizations.html
+++ b/revitalizations.html
@@ -140,7 +140,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4"><br><br>
+          <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Regional Revitalizations</h3>
               <ul>
