--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4"><br><br>
+          <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Licenses & Certificates</h3>
               <ul>
