Revise for all HTML pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="/" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
@@ -61,7 +61,7 @@
         <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -315,7 +315,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="research-projects.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">過往主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
+              <p class="description">過往主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -323,7 +323,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等機構，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
+              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等機構，致力於培育英語教育實務人才，提升英語教學品質。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -331,7 +331,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publications.html" class="stretched-link">學術發表</a></h4>
-              <p class="description">學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
+              <p class="description">學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -339,7 +339,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="participations.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">除學術發表外，學術參與涵蓋擔任論文審稿/口試委員、研討會主持人/評論人、期刊審查委員、客座講師與活動主辦人等角色，並投入各項研習課程。這些經驗強化其專業領域相關知識，也為後進學者提供了指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
+              <p class="description">除學術發表外，學術參與涵蓋擔任論文審稿/口試委員、研討會主持人/評論人、期刊審查委員、客座講師與活動主辦人等角色，並投入各項研習課程。這些經驗強化其專業領域相關知識，也為後進學者提供了指導與建議，進一步推動學術社群的發展。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -347,7 +347,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
               <h4 class="title"><a href="graduation-projects.html" class="stretched-link">專題指導</a></h4>
-              <p class="description">協助帶領學生們的畢業專題論文，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
+              <p class="description">協助帶領學生們的畢業專題論文，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -355,7 +355,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-experiences.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">曾經於各大學擔任教職與研究員職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
+              <p class="description">曾經於各大學擔任教職與研究員職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[開啟👆]</code></p>
             </div>
           </div>
 
@@ -371,7 +371,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。🖱️<code>點選各圖上方 <i class="bi bi-caret-right-square"></i> 可瀏覽內容 | <i class="bi bi-zoom-in"></i> 可放大封面</code>🖱️</p>
+        <p>
+          專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟Karen在學術與實務並進的旅程、以及對於教育與研究的熱情。
+          <code>[圖片上方 🖱️點選 <i class="bi bi-zoom-in"></i> 放大封面 / 🖱️點選 <i class="bi bi-caret-right-square"></i> 瀏覽內容]</code>
+        </p>
         <br>
       </div><!-- End Section Title -->
 
@@ -380,13 +383,12 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <!-- <li data-filter=".filter-books">Books</li> -->
-            <li data-filter=".filter-guides-competitions">競賽指導</li>
-            <li data-filter=".filter-revitalizations">地方創生</li>
-            <li data-filter=".filter-licenses-certificates">證照/證書</li>
-            <li data-filter=".filter-patents-awards">專利/獎項</li>
-            <li data-filter=".filter-mylife">生活🌎</li>
+            <li data-filter="*" class="filter-active">All 🌍</li>
+            <li data-filter=".filter-guides-competitions">競賽指導🎯</li>
+            <li data-filter=".filter-revitalizations">地方創生🌱</li>
+            <li data-filter=".filter-licenses-certificates">證照/證書📜</li>
+            <li data-filter=".filter-patents-awards">專利/獎項🏆</li>
+            <li data-filter=".filter-mylife">生活🧋</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -396,9 +398,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>競賽指導</h4>
-                  <p>《全國人文社會永續行動創新應用競賽》<br>✨ 獲選優勝&佳作 ✨</p>
-                  <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>競賽指導🎯</h4>
+                  <p>《全國人文社會永續行動創新應用競賽》<br>🎯 獲選優勝&佳作 🎯</p>
+                  <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🎯 獲選優勝&佳作 🎯" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="competitions.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
@@ -408,34 +410,10 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/licenses/AIL-expert.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                    <h4>證照/證書</h4>
+                    <h4>證照/證書📜</h4>
                     <p>楊真宜老師 - 證照/證書📜</p>
                   <a href="assets/img/licenses/AIL-expert.png" title="楊真宜老師 - 證照/證書📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="licenses-certificates.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                    <h4>阿弟</h4>
-                    <p>吉祥物 - 阿弟🐶🐾</p>
-                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-revitalizations">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/revitalizations/rev-01.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                    <h4>地方創生</h4>
-                    <p>楊真宜老師 - 地方創生🌱✨</p>
-                  <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -444,10 +422,34 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/patents/patent-cover.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>專利/獎項</h4>
-                    <p>楊真宜老師 - 專利/獎項🏆🏅</p>
-                  <a href="assets/img/patents/PAT-M657972.png" title="楊真宜老師 - 專利/獎項🏆🏅" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>專利/獎項🏆</h4>
+                    <p>楊真宜老師 - 專利/獎項🏆</p>
+                  <a href="assets/img/patents/PAT-M657972.png" title="楊真宜老師 - 專利/獎項🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="patents-awards.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-revitalizations">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/revitalizations/rev-01.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>地方創生🌱</h4>
+                    <p>楊真宜老師 - 地方創生🌱</p>
+                  <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生🌱" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="revitalizations.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>阿弟🐾</h4>
+                    <p>吉祥物 - 阿弟🐶🐾</p>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
             </div>
@@ -456,9 +458,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/mylife/mylife-01.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>生活🌎</h4>
-                  <p>楊真宜老師 - 生活🌎</p>
-                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🌎" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>生活🧋</h4>
+                  <p>楊真宜老師 - 生活🧋</p>
+                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🧋" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
