--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -45,7 +45,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="/" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
@@ -55,13 +55,13 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="/"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -146,7 +146,7 @@
             </div>
 
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
-              <hr><div style="text-align: right;"><a href="/#showcase">BACK</a></div>
+              <hr><div style="text-align: right;"><a href="/#showcase">↩️ BACK</a></div>
             </div>
           </div>
 
