--- a/mylife-details.html
+++ b/mylife-details.html
@@ -45,7 +45,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="/" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
@@ -55,13 +55,13 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="/"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -71,11 +71,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">My Life🌎</h1>
+        <h1 class="mb-2 mb-lg-0">My Life🧋</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="/#showcase">Home</a></li>
-            <li class="current">生活🌎</li>
+            <li class="current">生活🧋</li>
           </ol>
         </nav>
       </div>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/mylife/mylife-04.jpg" alt="" style="width: 60%; height: 60%;">
+                  <img src="assets/img/mylife/mylife-04.jpg" alt="" style="width: 50%; height: 50%;">
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
@@ -142,7 +142,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>My Life🌎</h3>
+              <h3>My Life🧋</h3>
               <ul>
                 <li><i class="bi bi-airplane"></i> 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
                 <li><i class="bi bi-airplane"></i> 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
-              <hr><div style="text-align: right;"><a href="/#showcase">BACK</a></div>
+              <hr><div style="text-align: right;"><a href="/#showcase">↩️ BACK</a></div>
             </div>
           </div>
 
