--- a/research-projects.html
+++ b/research-projects.html
@@ -45,7 +45,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="/" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
@@ -55,13 +55,13 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="/"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
 
@@ -114,7 +114,7 @@
               <li><i class="bi bi-caret-right"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
             </ul>
-            <hr><div style="text-align: right;"><a href="/#achievements">BACK</a></div>
+            <hr><div style="text-align: right;"><a href="/#achievements">↩️ BACK</a></div>
         </div>        
       </div>
     </section><!-- /Project Details Section -->
