Revise for all HTML pages

--- a/competitions.html
+++ b/competitions.html
@@ -61,7 +61,7 @@
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
