--- a/dog-details.html
+++ b/dog-details.html
@@ -61,7 +61,7 @@
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -125,11 +125,11 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>【吉祥物 - 阿弟🐾】小檔案</h3>
               <ul>
-                <li><strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
-                <li><strong>生日</strong>：2020.02.22</li>
-                <li><strong>品種</strong>：黑柴 🐶🐾</li>
-                <li><strong>性別</strong>：Male ♓♂️</li>
-                <li><strong>喜好</strong>：吃肉🍖、散步🐕、咬飼主🚶‍♂️、咬爛衛生紙🧻</li>
+                <li>🥏 <strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
+                <li>🥏 <strong>生日</strong>：2020.02.22</li>
+                <li>🥏 <strong>品種</strong>：黑柴 🐶🐾</li>
+                <li>🥏 <strong>性別</strong>：Male ♓♂️</li>
+                <li>🥏 <strong>喜好</strong>：吃肉🥩、散步🐕、咬飼主🙇、咬爛衛生紙🧻</li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
