--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -61,7 +61,7 @@
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -137,11 +137,11 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Licenses & Certificates</h3>
               <ul>
-                <li><i class="bi bi-bookmark-star"></i> TKT 劍橋英語教師認證</li>
-                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧專業級證照</li>
-                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧基礎級證照</li>
-                <li><i class="bi bi-bookmark-star"></i> 高級中等學校英文科教師證書</li>
-                <li><i class="bi bi-bookmark-star"></i> 閩南語語言能力認證考試合格證書</li>
+                <li>📜 TKT 劍橋英語教師認證</li>
+                <li>📜 AIL 人工智慧專業級證照</li>
+                <li>📜 AIL 人工智慧基礎級證照</li>
+                <li>📜 高級中等學校英文科教師證書</li>
+                <li>📜 閩南語語言能力認證考試合格證書</li>
               </ul>
             </div>
 
