--- a/patents-awards.html
+++ b/patents-awards.html
@@ -61,7 +61,7 @@
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -128,9 +128,9 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Patents & Awards</h3>
               <ul>
-                <li><i class="bi bi-bookmark-star"></i> 新型研發專利【外語口說評分系統】</li>
-                <li><i class="bi bi-bookmark-star"></i> 國立勤益科技大學推動研究發展績效獎</li>
-                <li><i class="bi bi-bookmark-star"></i> 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
+                <li>🏆 新型研發專利【外語口說評分系統】</li>
+                <li>🏆 國立勤益科技大學推動研究發展績效獎</li>
+                <li>🏆 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
               </ul>
             </div>
 
