--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="#">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -388,7 +388,7 @@
             <li data-filter=".filter-revitalizations">地方創生🌱</li>
             <li data-filter=".filter-licenses-certificates">證照/證書📜</li>
             <li data-filter=".filter-patents-awards">專利/獎項🏆</li>
-            <li data-filter=".filter-mylife">生活🧋</li>
+            <li data-filter=".filter-mylife">生活🍟</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -458,9 +458,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/mylife/mylife-01.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>生活🧋</h4>
-                  <p>楊真宜老師 - 生活🧋</p>
-                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🧋" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>生活🍟</h4>
+                  <p>楊真宜老師 - 生活🍟</p>
+                  <a href="assets/img/mylife/mylife-01.jpg" title="楊真宜老師 - 生活🍟" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="mylife-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
