--- a/revitalizations.html
+++ b/revitalizations.html
@@ -61,7 +61,7 @@
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="/#hero"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
+        <li><a href="/#hero">📊 <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -144,11 +144,11 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Regional Revitalizations</h3>
               <ul>
-                <li><i class="bi bi-binoculars"></i> 田野調查</li>
-                <li><i class="bi bi-rocket-takeoff"></i> 地方創生</li>
-                <li><i class="bi bi-backpack2"></i> 社會實踐</li>
-                <li><i class="bi bi-box-arrow-down-right"></i> 跨領域協作</li>
-                <li><i class="bi bi-brightness-alt-high"></i> 聯合國 SDGs 永續發展</li>
+                <li>🌱 地方創生</li>
+                <li>🔍 田野調查</li>
+                <li>🚀 社會實踐</li>
+                <li>⚔️ 跨領域協作</li>
+                <li>♻️ 聯合國 SDGs 永續發展</li>
               </ul>
             </div>
 
