Revise for all HTML pages

--- a/mylife-details.html
+++ b/mylife-details.html
@@ -144,13 +144,13 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>My Life🍟</h3>
               <ul>
-                <li><i class="bi bi-airplane"></i> 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
-                <li><i class="bi bi-airplane"></i> 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
-                <li><i class="bi bi-airplane"></i> 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
-                <li><i class="bi bi-airplane"></i> 義大利威尼斯旅遊<br>Traveling in Venice, Italy</li>
-                <li><i class="bi bi-airplane"></i> 夏威夷海灘<br>Hawaiian beaches</li>
-                <li><i class="bi bi-airplane"></i> 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
-                <li><i class="bi bi-airplane"></i> 西子灣騎單車<br>Bicycling in Sizihwan</li>
+                <li>✈️ 夏威夷訪問學者期間<br>During the visiting scholar period in Hawaii</li>
+                <li>✈️ 西班牙畢卡索博物館<br>Picasso Museum in Spain</li>
+                <li>✈️ 義大利維洛納旅遊<br>Traveling in Verona, Italy</li>
+                <li>✈️ 義大利威尼斯旅遊<br>Traveling in Venice, Italy</li>
+                <li>✈️ 夏威夷海灘<br>Hawaiian beaches</li>
+                <li>✈️ 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
+                <li>✈️ 西子灣騎單車<br>Bicycling in Sizihwan</li>
               </ul>
             </div>
 
