Fix typo for collaborations

--- a/collaborations.html
+++ b/collaborations.html
@@ -96,7 +96,7 @@
             <h3><i class="bi bi-arrow-repeat"></i> 產學合作計畫  Industry-academia Collaboration Projects</h3>
             <hr>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(Live ABC 互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙股份有限公司 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(佳音太平分校) | 計畫主持人 | 台中市私立喬伊美語短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(夏恩英語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(芝麻街美語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
