Fix typo for collaborations

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <li><i class="bi bi-briefcase"></i> <b>產學合作計畫 - 計畫主持人</b></li>
                   <ul style="list-style-type: none;">
                     <li>英語補習教育實務人才培育計畫</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫1：台中市私立希伯崙股份有限公司 | 互動美語北屯分公司</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫1：台中市私立希伯崙股份有限公司 | Live ABC 互動美語北屯分公司</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫2：台中市私立喬伊美語短期補習班 | 佳音太平分校</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫3：台中市私立琳達文理短期補習班 | 夏恩英語</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫4：台中市私立琳達文理短期補習班 | 芝麻街美語</li>
@@ -323,7 +323,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="collaborations.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等機構，致力於培育英語教育實務人才，提升英語教學品質。<code>[開啟👆]</code></p>
+              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括 Live ABC 互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等機構，致力於培育英語教育實務人才，提升英語教學品質。<code>[開啟👆]</code></p>
             </div>
           </div>
 
