--- a/revitalizations.html
+++ b/revitalizations.html
@@ -88,7 +88,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-6">
             <div class="portfolio-details-slider swiper init-swiper">
 
               <script type="application/json" class="swiper-config">
@@ -110,7 +110,7 @@
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper">
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/revitalizations/rev-01.jpg" alt="" style="width: 60%; height: 60%;">
+                  <img src="assets/img/revitalizations/rev-01.jpg" alt="" style="width: 80%; height: 80%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/revitalizations/rev-03.jpg" alt="" style="width: 60%; height: 60%;">
+                  <img src="assets/img/revitalizations/rev-03.jpg" alt="" style="width: 80%; height: 80%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/revitalizations/rev-06.jpg" alt="" style="width: 60%; height: 60%;">
+                  <img src="assets/img/revitalizations/rev-06.jpg" alt="" style="width: 80%; height: 80%;">
                 </div>
 
                 <div class="swiper-slide">
@@ -140,16 +140,41 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Regional Revitalizations</h3>
               <ul>
-                <li>🌱 地方創生</li>
-                <li>🔍 田野調查</li>
-                <li>🚀 社會實踐</li>
-                <li>⚔️ 跨領域協作</li>
-                <li>♻️ 聯合國 SDGs 永續發展</li>
+                <li>🌱地方創生、🔍田野調查、🚀社會實踐、⚔️跨領域協作、♻️聯合國SDGs永續發展</li>
               </ul>
+              <hr>
+              <h4>公部門計畫撰寫與執行</h4>
+              <ul>
+                <li>🛤️ 北區青聚點地方創生團隊徵件計畫 | 桃園市政府 青年事務局 | 2021/10</li>
+                <li>🛤️ 110-112年「產業文化(性)資產創生計畫」補助 | 文化部 文化資產局 | 2021/9</li>
+                <li>🛤️ 客家委員會客庄創生環境營造計畫 | 客家委員會 | 2021/9</li>
+                <li>🛤️ 東海國小暑期營教案 | 新竹縣竹北市 東海國小 | 2021/6</li>
+                <li>🛤️ 客家普及著作出版補助 | 客家傳播委員會 | 2021/5</li>
+                <li>🛤️《犁頭山水話》地方調查及刊物製作 | 國立清華大學 人文社會研究中心 | 2021/4</li>
+                <li>🛤️ 110年度「地方創生青年培力工作站」 | 國家發展委員會 | 2021/3</li>
+                <li>🛤️「科技部人文創新與社會實踐計畫」– 新竹智慧城鄉創生計畫–地方活力與能力建構 | 國立清華大學 區域創新中心 | 2021/3</li>
+              </ul>
+              <hr>
+              <h4>活動規劃與執行</h4>
+              <h5>2021/1 - 2021/12 | 國立清華大學 區域創新中心</h5>
+              <ul>
+                <li>🛤️ 東海水礱間策展、台灣豐禾子協會</li>
+                <li>🛤️ 《犁頭山水話》地方刊物、《犁頭山水話》創刊號記者會</li>
+                <li>🛤️ 大新竹社會實踐議題教師工作坊、新竹縣竹北市城鄉青年交流會</li>
+              </ul>
+              <hr>
+              <h5>2018/8 - 2020/12 | 國立中山大學 社會實踐與發展研究中心</h5>
+              <ul>
+                <li>🛤️ 《舊埕黑白喇》：做伙來聽歌、《舊埕黑白喇》- 鬥陣食辦桌</li>
+                <li>🛤️ 兒童民族誌工作坊、明德國小聲景採集工作坊、西子灣隧道展 X 高雄市電影館</li>
+                <li>🛤️ 舊左營地區田野調查、左營舊城區聲景靜態展、左營社區劇場創作展演</li>
+                <li>🛤️ 果貿說唱大賽（第一屆、第二屆）、果貿社區劇場、果貿私房美食說明會</li>
+                <li>🛤️ 【渡‧左營】開幕活動暨私房食譜發表會、左營眷村媽媽私房料理採訪、『眷戀食光 -左營媽媽記憶之味』</li>
+              </ul>              
             </div>
 
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="200">
