Revise for revitalizations

--- a/revitalizations.html
+++ b/revitalizations.html
@@ -148,26 +148,28 @@
               </ul>
               <hr>
               <h4>公部門計畫撰寫與執行</h4>
+              <h6>主責：計畫撰寫 、統籌</h6>
               <ul>
-                <li>🛤️ 北區青聚點地方創生團隊徵件計畫 | 桃園市政府 青年事務局 | 2021/10</li>
-                <li>🛤️ 110-112年「產業文化(性)資產創生計畫」補助 | 文化部 文化資產局 | 2021/9</li>
-                <li>🛤️ 客家委員會客庄創生環境營造計畫 | 客家委員會 | 2021/9</li>
-                <li>🛤️ 東海國小暑期營教案 | 新竹縣竹北市 東海國小 | 2021/6</li>
-                <li>🛤️ 客家普及著作出版補助 | 客家傳播委員會 | 2021/5</li>
-                <li>🛤️《犁頭山水話》地方調查及刊物製作 | 國立清華大學 人文社會研究中心 | 2021/4</li>
-                <li>🛤️ 110年度「地方創生青年培力工作站」 | 國家發展委員會 | 2021/3</li>
-                <li>🛤️「科技部人文創新與社會實踐計畫」– 新竹智慧城鄉創生計畫–地方活力與能力建構 | 國立清華大學 區域創新中心 | 2021/3</li>
+                <li>🛤️ 北區青聚點地方創生團隊徵件計畫 | 桃園市政府 青年事務局 | 2021.10</li>
+                <li>🛤️ 110-112年「產業文化(性)資產創生計畫」補助 | 文化部 文化資產局 | 2021.09</li>
+                <li>🛤️ 客家委員會客庄創生環境營造計畫 | 客家委員會 | 2021.09</li>
+                <li>🛤️ 東海國小暑期營教案 | 新竹縣竹北市 東海國小 | 2021.06</li>
+                <li>🛤️ 客家普及著作出版補助 | 客家傳播委員會 | 2021.05</li>
+                <li>🛤️《犁頭山水話》地方調查及刊物製作 | 國立清華大學 人文社會研究中心 | 2021.04</li>
+                <li>🛤️ 110年度「地方創生青年培力工作站」 | 國家發展委員會 | 2021.03</li>
+                <li>🛤️「科技部人文創新與社會實踐計畫」– 新竹智慧城鄉創生計畫–地方活力與能力建構 | 國立清華大學 區域創新中心 | 2021.03</li>
               </ul>
               <hr>
               <h4>活動規劃與執行</h4>
-              <h5>2021/1 - 2021/12 | 國立清華大學 區域創新中心</h5>
+              <h5>2021.01 - 2021.12 | 國立清華大學 區域創新中心</h5>
+              <h6>主責：籌備、統籌、執行、演講、創辦、規劃內容、採訪編輯、記者會/發表會主持人、協會創辦、理事</h6>
               <ul>
                 <li>🛤️ 東海水礱間策展、台灣豐禾子協會</li>
                 <li>🛤️《犁頭山水話》地方刊物、《犁頭山水話》創刊號記者會</li>
                 <li>🛤️ 大新竹社會實踐議題教師工作坊、新竹縣竹北市城鄉青年交流會</li>
               </ul>
-              <hr>
-              <h5>2018/8 - 2020/12 | 國立中山大學 社會實踐與發展研究中心</h5>
+              <h5>2018.08 - 2020.12 | 國立中山大學 社會實踐與發展研究中心</h5>
+              <h6>主責：統籌、執行、採訪、活動主持人</h6>
               <ul>
                 <li>🛤️《舊埕黑白喇》：做伙來聽歌、《舊埕黑白喇》- 鬥陣食辦桌</li>
                 <li>🛤️ 兒童民族誌工作坊、明德國小聲景採集工作坊、西子灣隧道展 X 高雄市電影館</li>
