Fix typo for overall repo

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 國科會 102-2917-I-007-026 (2012)</li></ul>
               <h4>語言學研究生獎學金</h4>
               <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
-              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 財團法人語言訓練測驗中心 LTTC (2011)</li></ul>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> LTTC 財團法人語言訓練測驗中心 (2011)</li></ul>
               <h4>年度最佳論文獎</h4>
               <p><em>Award of Annual MA thesis</em></p>
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> Award of Annual MA thesis, Providence University (2008)</li></ul>
@@ -260,7 +260,7 @@
               <h4><span style="text-transform: none">Teaching Knowledge Test</span> 劍橋英語教師認證</h4>
               <h6>TKT Module 2 | Band 2 Cambridge English</h6>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-bookmark-star"></i> 證書編號：231TW0400002</li>
+                <li><i class="bi bi-bookmark-star"></i> 證書編號：C1295176</li>
               </ul>
               <h4>AIL 人工智慧專業級證照</h4>
               <h6>Artificial Intelligence Literacy Certification Programs | Expert</h6>
