--- a/revitalizations.html
+++ b/revitalizations.html
@@ -142,7 +142,7 @@
 
           <div class="col-lg-6">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>Regional Revitalizations</h3>
+              <h3>地方創生 Regional Revitalizations</h3>
               <ul>
                 <li>🌱地方創生、🔍田野調查、🚀社會實踐、⚔️跨領域協作、♻️聯合國SDGs永續發展</li>
               </ul>
