--- a/work-experiences.html
+++ b/work-experiences.html
@@ -181,13 +181,13 @@
               <li><i class="bi bi-caret-right"></i> Introduction to Linguistics</li>
             </ul>
 
-            <h4>國立清華大學外國語言文學研究所 | 教學助理</h4>
+            <h4>國立清華大學外國語文學系研究所 | 教學助理</h4>
             <h5>2010</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> Contrastive Analysis and Error Analysis</li>
             </ul>
 
-            <h4>國立清華大學外國語言文學系 | 教學助理</h4>
+            <h4>國立清華大學外國語文學系 | 教學助理</h4>
             <h5>2010</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> Syntax</li>
