--- a/competitions.html
+++ b/competitions.html
@@ -135,7 +135,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>【教育部】全國人文社會永續行動創新應用競賽</h3>
+              <h3>【教育部】全國人文社會永續行動<br>創新應用競賽</h3>
               <ul>
                 <!-- <li><strong>📅 拍攝日期</strong>：2024.11.13</li> -->
                 <li><strong>🏫 學校名稱</strong>：國立勤益科技大學</li>
