--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
         <br><br><br><br><br>
         <h2>Chen-Yi Yang</h2>
         <p><span>I'm a teacher, sociolinguist, and a cross-field practitioner</span></p>
+        <br>
+        <style>
+          .video-container {
+            width: 560px;
+            height: 315px;
+          }
+          .video-container iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+          }
+          @media (max-width: 768px) {
+            .video-container {
+              max-width: 100%;
+              width: 100%;
+              aspect-ratio: 16 / 9;
+              height: auto;
+            }
+          }
+        </style>
+
+        <div class="video-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wX8kywE8a8U?si=-pNBlxYZ8C9YcKAL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+        </div>
         <!-- <p>I'm <span class="typed" data-typed-items="a teacher, sociolinguist, a cross-field practitioner">sociolinguist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
       </div>
 
