--- a/dog-details.html
+++ b/dog-details.html
@@ -127,7 +127,7 @@
               <ul>
                 <li>🥏 <strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
                 <li>🥏 <strong>生日</strong>：2020.02.22</li>
-                <li>🥏 <strong>品種</strong>：黑柴 🐶🐾</li>
+                <li>🥏 <strong>品種</strong>：黑柴 🐺🐾</li>
                 <li>🥏 <strong>性別</strong>：Male ♓♂️</li>
                 <li>🥏 <strong>喜好</strong>：吃肉🥩、散步🐕、咬飼主🙇、咬爛衛生紙🧻</li>
               </ul>
