--- a/index.html
+++ b/index.html
@@ -130,17 +130,21 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>楊真宜 Chen-Yi Yang</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name (E):</strong> <span>Karen Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph. D.</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>04-23924505 #8633</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Taichung, Taiwan</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Pet:</strong> Black Shiba Inu 🐺🍖<span>
+                    
+                  </span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Name (E):</strong> <span>Karen Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Office:</strong> <span>K602A</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>04-23924505 #8633</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chenyi@ncut.edu.tw</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>linkedin.com/in/karen0913</span></a></li>
                 </ul>
               </div>
             </div>
@@ -471,8 +475,8 @@
                 <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                     <h4>阿弟🐾</h4>
-                    <p>吉祥物 - 阿弟🐶🐾</p>
-                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <p>吉祥物 - 阿弟🐺🐾</p>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟🐺🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dog-details.html" title="More Details" class="details-link"><i class="bi bi-caret-right-square"></i></a>
                 </div>
               </div>
