--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    .video-container {
+      width: 400px;
+      height: 225px;
+    }
+    .video-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    @media (max-width: 768px) {
+      .video-container {
+        max-width: 100%;
+        width: 100%;
+        aspect-ratio: 16 / 9;
+        height: auto;
+      }
+    }
+  </style>
+
   <!-- =======================================================
   * Template Name: iPortfolio
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
@@ -76,30 +96,10 @@
         <br><br><br><br><br>
         <h2>Chen-Yi Yang</h2>
         <p><span>I'm a teacher, sociolinguist, and a cross-field practitioner</span></p>
-        <br>
-        <style>
-          .video-container {
-            width: 400px;
-            height: 225px;
-          }
-          .video-container iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-          }
-          @media (max-width: 768px) {
-            .video-container {
-              max-width: 100%;
-              width: 100%;
-              aspect-ratio: 16 / 9;
-              height: auto;
-            }
-          }
-        </style>
-
+        <!-- <br>
         <div class="video-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/wX8kywE8a8U?si=-pNBlxYZ8C9YcKAL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-        </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wX8kywE8a8U?si=-pNBlxYZ8C9YcKAL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div> -->
         <!-- <p>I'm <span class="typed" data-typed-items="a teacher, sociolinguist, a cross-field practitioner">sociolinguist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
       </div>
 
@@ -117,10 +117,11 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/my-profile-full.jpg" class="img-fluid" alt="">
+          <div class="col-lg-5 video-container">
+            <!-- <img src="assets/img/my-profile-full.jpg" class="img-fluid" alt=""> -->
+            <iframe width="475" height="295" src="https://www.youtube.com/embed/wX8kywE8a8U?si=hnVl1jlMXjhLG0gL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
-          <div class="col-lg-8 content">
+          <div class="col-lg-7 content">
             <h2>Assistant Professor & Sociolinguist</h2>
             <hr>
             <p></p>
