--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <style>
     .video-container {
-      width: 400px;
-      height: 225px;
+      width: 520px;
+      height: 280px;
     }
     .video-container iframe {
       width: 100%;
@@ -119,7 +119,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-5 video-container">
             <!-- <img src="assets/img/my-profile-full.jpg" class="img-fluid" alt=""> -->
-            <iframe width="475" height="295" src="https://www.youtube.com/embed/wX8kywE8a8U?si=hnVl1jlMXjhLG0gL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/wX8kywE8a8U?si=hnVl1jlMXjhLG0gL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
           <div class="col-lg-7 content">
             <h2>Assistant Professor & Sociolinguist</h2>
