--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph. D.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Office:</strong> <span>K602A</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>karen0913</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>linkedin.com/in/karen0913</span></a></li>
                 </ul>
               </div>
             </div>
