--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     .video-container {
       width: 400px;
       height: 215px;
+      padding-right: 45px;
     }
     .video-container iframe {
       width: 100%;
